--- a/ClientApp/src/app/shared/components/details-hero/details-hero.component.html
+++ b/ClientApp/src/app/shared/components/details-hero/details-hero.component.html
@@ -30,6 +30,7 @@
       </div>
   
         <app-image
+          class="image"
           [(src)]="imageUrl"
           [editMode]="editMode && imageEditable"
           alt="Hero Image"
