--- a/ClientApp/src/app/components/config/google-maps/google-maps.component.html
+++ b/ClientApp/src/app/components/config/google-maps/google-maps.component.html
@@ -1,25 +1,22 @@
-<div class="container">
-    <!-- Search Bar -->
-    <app-location-search 
+<div class="container" #container>
+  <app-location-search 
       *ngIf="editMode" 
       (locationChange)="onLocationChange($event)" 
       (latLongChange)="onLatLongChange($event)" 
       [type]="'establishment'">
-    </app-location-search>
-  
-    @if (lat && lng) {
-      <!-- Google Map -->
-      <google-map [options]="options" [width]="800" [height]="400">
-        <map-marker 
-          [clickable]="false" 
-          [draggable]="true"
-          [position]="{ lat, lng }">
-        </map-marker>
-      </google-map>
-    } @else {
-        <div class="map-placeholder">
-            No location set
-        </div>
-    }
-  </div>
-  
+  </app-location-search>
+
+  @if (lat && lng) {
+    <google-map [options]="options" [width]="mapWidth" [height]="mapHeight">
+      <map-marker 
+        [clickable]="false" 
+        [draggable]="true"
+        [position]="{ lat, lng }">
+      </map-marker>
+    </google-map>
+  } @else {
+      <div class="map-placeholder">
+          No location set
+      </div>
+  }
+</div>
