--- a/ClientApp/src/app/components/footer/footer.component.scss
+++ b/ClientApp/src/app/components/footer/footer.component.scss
@@ -9,6 +9,7 @@
         font-weight: 600;
         text-decoration: none;
     }
+    container-type: inline-size;
   }
   
   .top-row {
@@ -18,7 +19,7 @@
     padding-bottom: 10px;
   }
   
-  .app-logo {
+  .logo-long, .logo-short {
     height: 50px;
   }
   
@@ -43,5 +44,19 @@
   
   .bottom-link a:hover {
     text-decoration: underline;
+  }
+
+  .logo-short {
+    display: none;
+  }
+
+  @container(width < 600px){
+    .logo-long {
+      display: none;
+    }
+
+    .logo-short {
+      display: block;
+    }
   }
   
