--- a/ClientApp/src/app/components/header/header.component.scss
+++ b/ClientApp/src/app/components/header/header.component.scss
@@ -1,11 +1,11 @@
 .container {
-    background: #fff;
+    background: white;
     border: 2px solid #e2e8f0;
     border-radius: 12px;
     padding: 16px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-    
+    cursor: pointer; /* 👈 This changes the mouse to a pointer on hover */
+    transition: box-shadow 0.2s ease, transform 0.1s ease;
     max-height: 250x;
     max-width: 270px;
     
@@ -13,6 +13,11 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+
+    &:hover{
+        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2); /* make this bigger */
+        
+    }
 
     > img {
         min-height: 200px;
