--- a/ClientApp/src/app/components/search/search.component.html
+++ b/ClientApp/src/app/components/search/search.component.html
@@ -1,4 +1,4 @@
-
+<!-- index.html -->
 <div class="container">
   <div class="wrapper">
     <!-- Location Search Component -->
@@ -17,19 +17,19 @@
         [(ngModel)]="searchParams.searchTerm"
         [matAutocomplete]="auto">
       <mat-autocomplete #auto="matAutocomplete">
-        <!-- Options can be added here, such as a list of autocomplete suggestions -->
+        <!-- Autocomplete suggestions -->
       </mat-autocomplete>
     </mat-form-field>
 
     <!-- Date Picker Component for 'event' headerType -->
     <app-date-picker *ngIf="searchParams.headerType === 'event'" 
-                      (dateChange)="onDateChange($event)" 
-                      class="date-picker">
+                     (dateChange)="onDateChange($event)" 
+                     class="date-picker">
     </app-date-picker>
-
-    <!-- Search Button -->
-    <button mat-icon-button color="accent" class="btn-search" (click)="onSearch()">
-      <mat-icon>search</mat-icon>
-    </button>
   </div>
+
+  <!-- Search Button (placed outside the wrapper) -->
+  <button mat-icon-button color="accent" class="btn-search" (click)="onSearch()">
+    <mat-icon>search</mat-icon>
+  </button>
 </div>
