- added transactions api and front end -styling changes

--- a/ClientApp/src/app/components/artist-navbar/artist-navbar.component.html
+++ b/ClientApp/src/app/components/artist-navbar/artist-navbar.component.html
@@ -1,5 +1,6 @@
 <app-navbar>
     <ng-template #content>
+      <li><a routerLink="/artist">Artist Page</a></li>
       <li><a routerLink="my" routerLinkActive="active">Your Artist</a></li>
       <li><a routerLink="find" routerLinkActive="active">Find a Venue</a></li>
       <li><a routerLink="" routerLinkActive="active">Back to Customer Page</a></li>
