--- a/ClientApp/src/app/pages/venue-dashboard/venue-dashboard.component.html
+++ b/ClientApp/src/app/pages/venue-dashboard/venue-dashboard.component.html
@@ -16,6 +16,7 @@
         </div>
         <div section-three>
             <h2 class="title">Finance</h2>
+            <app-transactions></app-transactions>
         </div>
     </app-dashboard-layout>
 }
