--- a/ClientApp/src/app/pages/venue-details/venue-details.component.html
+++ b/ClientApp/src/app/pages/venue-details/venue-details.component.html
@@ -2,7 +2,7 @@
     <app-venue-details-hero 
         [(venue)]="venue" 
         [editMode]="editMode" 
-        (contentChange)="onChangeDetected()"
+        (venueChange)="onChangeDetected()"
         (latLongChange)="updateLatLong($event)"
         (imageChange)="onImageChange($event)"
         />
