--- a/ClientApp/src/app/shared/layouts/dashboard-layout/dashboard-layout.component.html
+++ b/ClientApp/src/app/shared/layouts/dashboard-layout/dashboard-layout.component.html
@@ -1,6 +1,8 @@
-<div class="container">
-    <ng-content select="[section-one]"></ng-content>
-    <ng-content select="[section-two]"></ng-content>
-    <ng-content select="[section-three]"></ng-content>
+<div class="container-wrapper">
+    <div class="container">
+        <ng-content select="[section-one]"></ng-content>
+        <ng-content select="[section-two]"></ng-content>
+        <ng-content select="[section-three]"></ng-content>
+    </div>
 </div>
   
