--- a/ClientApp/src/app/components/venue-navbar/venue-navbar.component.html
+++ b/ClientApp/src/app/components/venue-navbar/venue-navbar.component.html
@@ -1,6 +1,6 @@
 <app-navbar>
     <ng-template #content>
-        <li><a routerLink="/venue">Venue Dashboard</a></li>
+        <li><a routerLink="/venue">Venue Page</a></li>
         <li><a><a routerLink="my" routerLinkActive="active">Your Venue</a></a></li>
         <li><a><a routerLink="find" routerLinkActive="active">Find an Artist</a></a></li>
         <li><a><a routerLink="" routerLinkActive="active">Back to Customer Page</a></a></li>
