--- a/ClientApp/src/app/shared/layouts/dashboard-layout/dashboard-layout.component.scss
+++ b/ClientApp/src/app/shared/layouts/dashboard-layout/dashboard-layout.component.scss
@@ -1,25 +1,29 @@
-.container {
+.container-wrapper {
+    container-type: inline-size;
+    width: 100%; // Important to make it a measurable container
+  }
+  
+  .container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 16px;
-    padding: 16px;
-    min-height: 100vh;
-
-    > :host ::ng-deep [section-one],
-    :host ::ng-deep [section-two],
-    :host ::ng-deep [section-three],
-    :host ::ng-deep [section-four] {
-        border: 2px solid #ccc;
-        padding: 16px;
-        border-radius: 8px;
-        background-color: #f9f9f9;
-        box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    grid-template-columns: 1fr;
+    gap: 1rem;
+    padding: 20px;
+  
+    @container (min-width: 1100px) {
+      grid-template-columns: repeat(3, 1fr);
     }
-    
-    :host ::ng-deep .title {
-
-        text-align: center;
-        margin: 0 auto;
+  
+    > * {
+      border: 2px solid #ccc;
+      padding: 16px;
+      border-radius: 8px;
+      background-color: #f9f9f9;
+      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
     }
-}
+  
+    .title {
+      text-align: center;
+      margin: 0 auto;
+    }
+  }
   
