--- a/ClientApp/src/app/components/config/image/image.component.html
+++ b/ClientApp/src/app/components/config/image/image.component.html
@@ -11,7 +11,7 @@
   
     <ng-template #placeholder>
       <div class="placeholder" [style.width.px]="width" [style.height.px]="height">
-        No Image Selected
+        <p>No Image Selected</p>
       </div>
     </ng-template>
   
