--- a/ClientApp/src/app/components/payment-details/payment-details.component.html
+++ b/ClientApp/src/app/components/payment-details/payment-details.component.html
@@ -7,5 +7,5 @@
 <!-- If user is NOT verified -->
 <div *ngIf="!isVerified">
   <p>You need to complete your Stripe onboarding.</p>
-  <button mat-raised-button color="accent" (click)="startOnboarding()">Complete Onboarding</button>
+  <button mat-raised-button color="primary" (click)="startOnboarding()">Complete Onboarding</button>
 </div>
