--- a/ClientApp/src/app/pages/artist-dashboard/artist-dashboard.component.html
+++ b/ClientApp/src/app/pages/artist-dashboard/artist-dashboard.component.html
@@ -17,4 +17,6 @@
 
         </div>
     </app-dashboard-layout>
+}@else {
+    <app-config-item-not-found [itemName]="'Artist'"></app-config-item-not-found>
 }
