--- a/ClientApp/src/app/pages/create-venue/create-venue.component.html
+++ b/ClientApp/src/app/pages/create-venue/create-venue.component.html
@@ -1,4 +1,4 @@
 <app-create-navbar (create)="createChanges()"></app-create-navbar>
 <div class="container">
-    <app-venue-details [venue]="venue" [editMode]="true" (listingCreate)="addListing($event)" (imageChange)="updateImage($event)"></app-venue-details>
+    <app-venue-details [(venue)]="venue" [editMode]="true" (listingCreate)="addListing($event)" (imageChange)="updateImage($event)"></app-venue-details>
 </div>
