--- a/ClientApp/src/app/pages/venue-dashboard/venue-dashboard.component.html
+++ b/ClientApp/src/app/pages/venue-dashboard/venue-dashboard.component.html
@@ -19,4 +19,6 @@
             <app-transactions></app-transactions>
         </div>
     </app-dashboard-layout>
+} @else {
+    <app-config-item-not-found [itemName]="'Venue'"></app-config-item-not-found>
 }
