--- a/ClientApp/src/app/components/config-item-not-found/config-item-not-found.component.html
+++ b/ClientApp/src/app/components/config-item-not-found/config-item-not-found.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <h1>You don’t have a {{itemName}} yet</h1>
-    <p>Create?</p>
-    <button mat-raised-button color="accent" class="create-venue-btn" (click)="createItem()">
+    <h2>Create one?</h2>
+    <button mat-raised-button color="primary" (click)="createItem()">
         <mat-icon>add</mat-icon> Create {{itemName}}
     </button>
 </div>
