--- a/ClientApp/src/app/components/config-item-not-found/config-item-not-found.component.scss
+++ b/ClientApp/src/app/components/config-item-not-found/config-item-not-found.component.scss
@@ -1,8 +1,7 @@
 .container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    height: 100%; /* Full page height */
+    height: 100vh;
     text-align: center;
 }
