--- a/ClientApp/src/app/pages/artist-details/artist-details.component.html
+++ b/ClientApp/src/app/pages/artist-details/artist-details.component.html
@@ -22,12 +22,12 @@
         </section>
 
         <section [id]="navItems[1].fragment">
-            <h2 class="heading-events">Upcoming Events</h2>
+            <h2 class="heading-events">{{ navItems[1].name }}</h2>
             <app-artist-events [artist]="artist" [viewType]="EventViewType.Upcoming"/>
         </section>
 
         <section [id]="navItems[2].fragment">
-            <h2 class="reviews">Reviews</h2>
+            <h2 class="reviews">{{ navItems[2].name }}</h2>
             <app-artist-reviews [id]="artist.id"></app-artist-reviews>
         </section>
     </div>
