--- a/ClientApp/src/app/pages/profile-menu/profile-menu.component.scss
+++ b/ClientApp/src/app/pages/profile-menu/profile-menu.component.scss
@@ -2,17 +2,19 @@
     display: flex;
     max-width: 1200px;     /* or whatever width you prefer */
     margin: 0 auto;        /* centers the wrapper horizontally */
-    min-height: 100vh;
+    height: 100vh;
   }
 
 .sidebar {
   padding: 10px;
+  height: 100%;
 }
   
 .main-content {
   flex: 1;
   background-color: var(--background-white);
   padding: 1rem;
+  height:100%;
 }
   
 .btn-toggle {
