--- a/ClientApp/src/app/pages/venue-details/venue-details.component.html
+++ b/ClientApp/src/app/pages/venue-details/venue-details.component.html
@@ -7,14 +7,10 @@
         (imageChange)="onImageChange($event)"
         />
     <app-scrollspy [navItems]="navItems"></app-scrollspy>
-        <div class="container" *ngIf="venue">
+        <div class="container">
             <section [id]="navItems[0].fragment">
                 <h1>{{navItems[0].name}}</h1>
-                    <app-textarea [editMode]="editMode" label="About" [(content)]="venue.about" (contentChange)="onChangeDetected()"/>
-                    <app-badges
-                        [items]="venueGenres"
-                        [displayProperty]="'name'">
-                    </app-badges>
+                <app-textarea [editMode]="editMode" label="About" [(content)]="venue.about" (contentChange)="onChangeDetected()"/>
             </section>
             <mat-divider class="light" />
             <section [id]="navItems[1].fragment">
@@ -32,23 +28,18 @@
             <mat-divider class="light" />
             @if (venue.about) {
                 <section [id]="navItems[2].fragment">
-                    <h2 class="heading-events">Upcoming Events</h2>
+                    <h2 class="heading-events">{{ navItems[2].name }}</h2>
                     <app-venue-events [venue]="venue" [viewType]="EventViewType.Upcoming"/>
                 </section>
             }
-    
             <section [id]="navItems[3].fragment">
-                <h2 class="heading-videos">Videos</h2>
-            </section>
-    
-            <section [id]="navItems[4].fragment">
-                <h2 class="reviews">Reviews</h2>
+                <h2 class="reviews">{{ navItems[3].name }}</h2>
                 <app-venue-reviews [id]="venue.id"></app-venue-reviews>
             </section>
             <mat-divider class="light" />
             @if (exists('Listings')) {
-                <section [id]="navItems[5].fragment">
-                    <h2 class="heading-listings">Listings</h2>
+                <section [id]="navItems[4].fragment">
+                    <h2 class="heading-listings">{{ navItems[4].name }}</h2>
                     <app-listings [venueId]="venue.id" [editMode]="editMode" (listingCreate)="onListingCreate($event)" />
                 </section>
             }
