--- a/ClientApp/src/app/shared/templates/reviews/reviews.template.html
+++ b/ClientApp/src/app/shared/templates/reviews/reviews.template.html
@@ -36,13 +36,8 @@
     </app-card>
   </div>
 
-  <div class="pagination">
-    <mat-paginator
-      [length]="reviewsPage?.totalCount || 0"
-      [pageSize]="reviewsPage?.pageSize || 10"
-      [pageIndex]="(reviewsPage?.pageNumber ?? 1) - 1"
-      [pageSizeOptions]="[5, 10, 25, 50]"
-      (page)="onPageChange($event)">
-    </mat-paginator>
-</div>
+  <app-paginator
+      [pagination]="paginatedData"
+      (pageChange)="onPageChange($event)"
+    />
 </div>
