Validation and bug fixes

--- a/ClientApp/src/app/components/footer/footer.component.html
+++ b/ClientApp/src/app/components/footer/footer.component.html
@@ -2,7 +2,7 @@
     <div class="top-row">
         <img class="logo-long" src="../images/logo-long.png" alt="app-logo">
         <img class="logo-short" src="../images/logo.png" alt="app-logo">
-        <a routerLink="/partner" routerLinkActive="active">Find Events/Artists/Venues</a>
+        <a routerLink="/find" routerLinkActive="active">Find Events/Artists/Venues</a>
     </div>
   
     <div class="contact-info">
