--- a/ClientApp/src/app/shared/layouts/dashboard-layout/dashboard-layout.component.scss
+++ b/ClientApp/src/app/shared/layouts/dashboard-layout/dashboard-layout.component.scss
@@ -1,6 +1,6 @@
 .container-wrapper {
     container-type: inline-size;
-    width: 100%; // Important to make it a measurable container
+    height: 100vh;
   }
   
   .container {
