--- a/ClientApp/src/app/pages/venue-details/venue-details.component.html
+++ b/ClientApp/src/app/pages/venue-details/venue-details.component.html
@@ -39,7 +39,7 @@
             <mat-divider class="light" />
             @if (exists('Listings')) {
                 <section [id]="navItems[4].fragment">
-                    <h2 class="heading-listings">{{ navItems[4].name }}</h2>
+                    <h2 class="heading-listings">{{ navItems[4].name }}?</h2>
                     <app-listings [venueId]="venue.id" [editMode]="editMode" (listingCreate)="onListingCreate($event)" />
                 </section>
             }
