--- a/ClientApp/src/app/pages/customer-dashboard/customer-dashboard.component.html
+++ b/ClientApp/src/app/pages/customer-dashboard/customer-dashboard.component.html
@@ -6,10 +6,10 @@
         <!-- Add a button to manually trigger the artificial subscription -->
         <!-- <button (click)="triggerNewSubscription()">Trigger New Subscription</button> -->
 
-        <app-event-header-carousel title="Discover Events"></app-event-header-carousel>
+        <app-event-header-carousel appHeaderCarousel title="Discover Events"></app-event-header-carousel>
         <mat-divider></mat-divider>
-        <app-artist-header-carousel title="Discover Artists"></app-artist-header-carousel>
+        <app-artist-header-carousel appHeaderCarousel title="Discover Artists"></app-artist-header-carousel>
         <mat-divider></mat-divider>
-        <app-venue-header-carousel title="Discover Venues"></app-venue-header-carousel>
+        <app-venue-header-carousel appHeaderCarousel title="Discover Venues"></app-venue-header-carousel>
     </div>
 </app-filter>
