double sticky navbars

--- a/ClientApp/src/app/components/config-navbar/config-navbar.component.html
+++ b/ClientApp/src/app/components/config-navbar/config-navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="config-header-container">
+<nav #nav class="config-header-container">
     <div class="config-header-content">
         <ul>
             <li><button color="secondary" mat-fab extended [disabled]="!saveable" (click)="onCancel()">
