--- a/ClientApp/src/app/pages/artist-dashboard/artist-dashboard.component.html
+++ b/ClientApp/src/app/pages/artist-dashboard/artist-dashboard.component.html
@@ -2,6 +2,7 @@
     <app-dashboard-layout>
         <div section-one>
             <h2 class="title">Applications</h2>
+            <app-artist-listing-applications></app-artist-listing-applications>
         </div>
         <div section-two>
             <h2 class="title">Event</h2>
