--- a/ClientApp/src/app/pages/customer-dashboard/customer-dashboard.component.html
+++ b/ClientApp/src/app/pages/customer-dashboard/customer-dashboard.component.html
@@ -1,7 +1,7 @@
 <app-filter [searchParams]="searchParams" (searchParamsChange)="updateSearchParams($event)" (headerTypeChange)="changeHeaderType($event)">
     <app-search (search)="loadPage()" [searchParams]="searchParams" (searchParamsChange)="updateSearchParams($event)"></app-search>
     <div class="carousels">
-        <app-event-header-carousel *ngIf="recentEventHeaders.length > 0" [headers]="recentEventHeaders" title="Recently Posted Events"></app-event-header-carousel>
+        <app-event-header-carousel *ngIf="recentEventHeaders.length > 0" [headers]="recentEventHeaders" title="Recommended Events for You"></app-event-header-carousel>
         <mat-divider *ngIf="recentEventHeaders.length > 0"></mat-divider>
         <!-- Add a button to manually trigger the artificial subscription -->
         <!-- <button (click)="triggerNewSubscription()">Trigger New Subscription</button> -->
